@@ -65,7 +65,6 @@ export(is.corpus)
 export(is.dfm)
 export(kwic)
 export(language)
-export(likelihood.test)
 export(metacorpus)
 export(metadoc)
 export(ndoc)
