@@ -15,8 +15,9 @@ quanteda 0.5.4 (pending)
 
 * added a `+` method for corpus objects, to combine a corpus using this operator.
 
-* working on an experimental collocations2 that is much faster because it uses 
-  data.table and vector operations only
+* changed and fixed collocations(), which was not only fatally slow and inefficient,
+  but also wrong.  Now is much faster and O(n) because it uses data.table and vector 
+  operations only.
 
 quanteda 0.5.3
 ==============
